Modifica comentario ejercicio diabetes

--- a/02-diabetes.ipynb
+++ b/02-diabetes.ipynb
@@ -236,7 +236,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 410
+          "height": 390
         },
         "outputId": "14bbdffd-0dc0-4111-a63f-45d60b856c6d"
       },
@@ -904,7 +904,7 @@
       },
       "source": [
         "En este caso se tomo una cantidad de neuronas aleatorias menores a 10000.\n",
-        "Con los gráficos podemos observar que partir de 15 neuronas se vuelven muy parecidos los modelos y cuando las neuronas son muchas empieza a haber mas fluctiacion en las perdidas. 2 neuronas muestran resultados favorables pero tiene pequeñas fluctuaciones, con un número cercano a 15 las perdidas no fluctuan mucho.\n",
+        "Con los gráficos podemos observar que partir de 15 neuronas se vuelven muy parecidos los modelos y cuando las neuronas son muchas empieza a haber mas fluctuación en las perdidas. 2 neuronas muestran resultados favorables no son suficientes dado que su desempeño en el periodo no es el mejor, con un número cercano a 15 las perdidas no fluctuan mucho.\n",
         "\n"
       ]
     },
