Modifica funcion de activacion

--- a/03-spam.ipynb
+++ b/03-spam.ipynb
@@ -728,7 +728,7 @@
         "Costruccion de red neuronal:\n",
         "*   Tasa de aprendizaje de 0.01\n",
         "*   Máximas neuronas a evaluar 10\n",
-        "*   Función de activacion relu\n",
+        "*   Función de activacion logistica\n",
         "\n",
         "\n"
       ]
